--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -2,13 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_favorites"
+        android:id="@+id/action_books"
         android:enabled="true"
         android:icon="@drawable/baseline_menu_book_24"
-        android:title="Favorites"
+        android:title="Books"
         app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/action_schedules"
+        android:id="@+id/action_articles"
         android:enabled="true"
         android:icon="@drawable/baseline_library_books_24"
         android:title="Articles"
